tests/ui/generic-associated-types/ambig-hr-projection-issue-93340.next.stderr
error[E0283]: type annotations needed
  --> $DIR/ambig-hr-projection-issue-93340.rs:16:5
   |
LL |     cmp_eq
   |     ^^^^^^ cannot infer type of the type parameter `A` declared on the function `cmp_eq`
   |
   = note: cannot satisfy `_: Scalar`
note: required by a bound in `cmp_eq`
  --> $DIR/ambig-hr-projection-issue-93340.rs:10:22
   |
LL | fn cmp_eq<'a, 'b, A: Scalar, B: Scalar, O: Scalar>(a: A::RefType<'a>, b: B::RefType<'b>) -> O {
   |                      ^^^^^^ required by this bound in `cmp_eq`
help: consider specifying the generic arguments
   |
LL |     cmp_eq::<A, B, O>
   |           +++++++++++

error[E0271]: type mismatch resolving `build_expression<A, B, O>::{opaque#0} normalizes-to _`
  --> $DIR/ambig-hr-projection-issue-93340.rs:14:1
   |
LL | / fn build_expression<A: Scalar, B: Scalar, O: Scalar>(
LL | | ) -> impl Fn(A::RefType<'_>, B::RefType<'_>) -> O {
   | |_________________________________________________^ types differ

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0283.
For more information about an error, try `rustc --explain E0271`.
